# serialmon

./: .gitignore  README.md  pyproject.toml
src/serialmon/: __init__.py  __main__.py  finput.py  pyser.py  serdummy.py  styles.py  translate.py  widgets.py
